tests/errors/syn_class_var10.java
public class syn_class_var10 {
public static int name
}